devtools/client/themes/widgets.css
/* ... */
.
theme
-
firebug
.
breadcrumbs
-
widget
-
container
.
scrollbutton
-
up
:
active
.
theme
-
firebug
.
breadcrumbs
-
widget
-
container
.
scrollbutton
-
down
:
active
{
background
:
none
!
important
;
}
.
theme
-
firebug
.
breadcrumbs
-
widget
-
container
.
scrollbutton
-
up
>
.
toolbarbutton
-
icon
{
background
-
image
:
url
(
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
lft
-
sharp
.
gif
)
;
}
.
theme
-
firebug
.
breadcrumbs
-
widget
-
container
.
scrollbutton
-
down
>
.
toolbarbutton
-
icon
{
background
-
image
:
url
(
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
lft
-
sharp
.
gif
)
;
}
.
theme
-
firebug
.
breadcrumbs
-
widget
-
container
.
scrollbutton
-
up
:
not
(
[
disabled
]
)
:
active
:
hover
>
.
toolbarbutton
-
icon
.
theme
-
firebug
.
breadcrumbs
-
widget
-
container
.
scrollbutton
-
down
:
not
(
[
disabled
]
)
:
active
:
hover
>
.
toolbarbutton
-
icon
{
background
-
position
:
0
center
;
}
.
simple
-
list
-
widget
-
container
{
transform
:
translateZ
(
1px
)
;
}
.
simple
-
list
-
widget
-
item
.
selected
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
}
.
theme
-
dark
.
simple
-
list
-
widget
-
item
:
not
(
.
selected
)
:
hover
{
background
-
color
:
rgba
(
255
255
255
.
05
)
;
}
.
theme
-
light
.
simple
-
list
-
widget
-
item
:
not
(
.
selected
)
:
hover
{
background
-
color
:
rgba
(
0
0
0
.
05
)
;
}
.
simple
-
list
-
widget
-
empty
-
text
.
simple
-
list
-
widget
-
perma
-
text
{
padding
:
4px
8px
;
}
.
simple
-
list
-
widget
-
empty
-
text
.
simple
-
list
-
widget
-
perma
-
text
{
color
:
var
(
-
-
theme
-
body
-
color
-
alt
)
;
}
.
fast
-
list
-
widget
-
container
{
transform
:
translateZ
(
1px
)
;
}
.
fast
-
list
-
widget
-
empty
-
text
{
padding
:
4px
8px
;
}
.
fast
-
list
-
widget
-
empty
-
text
{
color
:
var
(
-
-
theme
-
body
-
color
-
alt
)
;
}
.
side
-
menu
-
widget
-
container
{
transform
:
translateZ
(
1px
)
;
}
.
side
-
menu
-
widget
-
container
[
with
-
arrows
=
true
]
.
side
-
menu
-
widget
-
item
{
margin
-
inline
-
end
:
-
1px
;
}
.
side
-
menu
-
widget
-
group
-
title
{
padding
:
4px
;
font
-
weight
:
600
;
border
-
bottom
:
1px
solid
rgba
(
128
128
128
0
.
15
)
;
}
.
side
-
menu
-
widget
-
group
-
title
+
.
side
-
menu
-
widget
-
group
-
list
.
side
-
menu
-
widget
-
item
-
contents
{
padding
-
inline
-
start
:
20px
;
}
.
side
-
menu
-
widget
-
item
{
border
-
bottom
:
1px
solid
rgba
(
128
128
128
0
.
15
)
;
background
-
clip
:
padding
-
box
;
}
.
side
-
menu
-
widget
-
item
.
selected
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
}
.
side
-
menu
-
widget
-
item
-
arrow
{
margin
-
inline
-
start
:
-
7px
;
width
:
7px
;
}
.
side
-
menu
-
widget
-
item
.
selected
>
.
side
-
menu
-
widget
-
item
-
arrow
{
background
-
image
:
var
(
-
-
sidemenu
-
selected
-
arrow
)
;
background
-
size
:
auto
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
center
right
;
}
.
side
-
menu
-
widget
-
item
.
selected
>
.
side
-
menu
-
widget
-
item
-
arrow
:
-
moz
-
locale
-
dir
(
rtl
)
{
background
-
image
:
var
(
-
-
sidemenu
-
selected
-
arrow
-
rtl
)
;
background
-
position
:
center
left
;
}
.
side
-
menu
-
widget
-
item
-
contents
{
padding
:
4px
;
padding
-
inline
-
end
:
8px
;
}
.
side
-
menu
-
widget
-
item
-
other
{
padding
-
inline
-
end
:
8px
;
margin
-
inline
-
start
:
-
4px
;
margin
-
inline
-
end
:
-
8px
;
}
.
side
-
menu
-
widget
-
group
-
title
+
.
side
-
menu
-
widget
-
group
-
list
.
side
-
menu
-
widget
-
item
-
other
{
margin
-
inline
-
start
:
-
20px
;
}
.
side
-
menu
-
widget
-
item
.
selected
.
side
-
menu
-
widget
-
item
-
other
:
not
(
.
selected
)
{
background
-
color
:
var
(
-
-
theme
-
sidebar
-
background
)
;
box
-
shadow
:
inset
2px
0
0
var
(
-
-
theme
-
selection
-
background
)
;
color
:
var
(
-
-
theme
-
body
-
color
)
;
}
.
side
-
menu
-
widget
-
item
.
selected
.
side
-
menu
-
widget
-
item
-
other
.
selected
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
}
.
side
-
menu
-
widget
-
item
-
other
:
first
-
of
-
type
{
margin
-
top
:
4px
;
}
.
side
-
menu
-
widget
-
item
-
other
:
last
-
of
-
type
{
margin
-
bottom
:
-
4px
;
}
.
side
-
menu
-
widget
-
group
-
checkbox
{
margin
:
0
;
margin
-
inline
-
end
:
4px
;
}
.
side
-
menu
-
widget
-
item
-
checkbox
{
margin
:
0
;
margin
-
inline
-
start
:
4px
;
}
.
side
-
menu
-
widget
-
empty
-
text
{
padding
:
4px
8px
;
background
-
color
:
var
(
-
-
theme
-
sidebar
-
background
)
;
}
.
variables
-
view
-
container
{
transform
:
translateZ
(
1px
)
;
}
.
variables
-
view
-
empty
-
notice
{
padding
:
2px
;
}
.
variables
-
view
-
empty
-
notice
{
color
:
var
(
-
-
theme
-
body
-
color
-
alt
)
;
}
.
variables
-
view
-
scope
:
focus
>
.
title
.
variable
-
or
-
property
:
focus
>
.
title
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
}
.
variables
-
view
-
scope
>
.
title
{
border
-
top
-
width
:
1px
;
border
-
top
-
style
:
solid
;
margin
-
top
:
-
1px
;
}
.
theme
-
firebug
.
variables
-
view
-
scope
>
.
title
{
height
:
auto
;
border
:
none
;
}
.
theme
-
firebug
.
variables
-
view
-
scope
>
.
title
>
.
theme
-
twisty
{
display
:
none
;
}
.
variables
-
view
-
variable
:
not
(
:
last
-
child
)
{
border
-
bottom
:
1px
solid
rgba
(
128
128
128
.
15
)
;
}
.
theme
-
firebug
.
variables
-
view
-
variable
{
border
-
bottom
:
1px
solid
transparent
;
}
.
variables
-
view
-
variable
>
.
title
>
.
name
{
font
-
weight
:
600
;
}
.
variable
-
or
-
property
:
focus
>
.
title
>
label
{
color
:
inherit
!
important
;
}
.
variables
-
view
-
container
.
theme
-
twisty
{
margin
:
2px
;
}
.
variable
-
or
-
property
>
.
title
>
.
theme
-
twisty
{
margin
-
inline
-
start
:
5px
;
}
.
variable
-
or
-
property
:
not
(
[
untitled
]
)
>
.
variables
-
view
-
element
-
details
{
margin
-
inline
-
start
:
7px
;
}
/* ... */

