Bug 1261477 - Make values of long watch expressions visible r=jlongster
UltraBlame original commit: 757bd4dfc3c3efb9fde7a82bad16a111d0ea8e80

--- a/devtools/client/themes/widgets.css
+++ b/devtools/client/themes/widgets.css
@@ -4153,6 +4153,27 @@ top
 ;
 }
 .
+variables
+-
+view
+-
+watch
+-
+expressions
+.
+title
+>
+.
+name
+{
+max
+-
+width
+:
+14em
+;
+}
+.
 theme
 -
 firebug
